This is a example

--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@
     <button type="button" class="btn btn-outline-dark download-button"> <i class="social-icon fab fa-instagram"></i> </button>
     <button type="button" class="btn btn-outline-dark download-button"> <i class="social-icon fab fa-linkedin"></i> </button> -->
 
+    <!-- Hello this is the example -->
   </footer>
 
 </body>
 
-</html>
+</html> 
